<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings_str">Настройки</string>
    <string name="dark_theme_str">Тёмная тема</string>
    <string name="share_str">Поделиться приложением</string>
    <string name="support_message_str">Написать в поддержку</string>
    <string name="agreement_str">Пользовательское соглашение</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media_button_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>
    <string name="search_str">Поиск</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="input_hint">Поиск</string>
    <string name="support_email">master@artwist.ru</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="track_title">Название трека</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">14:88</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>
    <string name="back_description">Вернуться назад</string>
    <string name="track_cover_description">Обложка трека</string>
    <string name="track_title_placeholder">Yesterday (Remastered 2009)</string>
    <string name="track_artist_placeholder">The Beatles</string>
    <string name="add_to_col_description">Добавить в коллекцию</string>
    <string name="play_button_description">Воспроизвести</string>
    <string name="like_button_description">Поставить отметку нравится</string>
    <string name="time_placeholder">00:00</string>
    <string name="track_time_description">Длительность</string>
    <string name="track_time_placeholder">5:39</string>
    <string name="track_album_description">Альбом</string>
    <string name="track_album_placeholder">Естердай (2009) Реммкс</string>
    <string name="track_year_description">Год</string>
    <string name="track_year_placeholder">1985</string>
    <string name="track_genre_description">Жанр</string>
    <string name="track_genre_placeholder">Rock</string>
    <string name="track_country_description">Страна</string>
    <string name="track_country_placeholder">Великобритания</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="exit_confirmation_title">Завершить создание плейлиста?</string>
    <string name="exit_confirmation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel_button">Отмена</string>
    <string name="finish_button">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="track_already_in">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added">Добавлено в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create_playlist_button_title">Создать</string>
    <string name="text_input_layout_title_field_name">Название*</string>
    <string name="text_input_layout_description_field_name">Описание</string>
    <string name="go_back_descriptior">Уйти назад</string>
    <string name="placeholder_descriptior">Плейсхолдер изображения</string>
    <string name="playlist_title">Best Songs 2021</string>
    <string name="description_example">2022</string>
    <string name="playlist_is_empty_warning">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="bottom_sheet_remove">Удалить плейлист</string>
    <string name="bottom_sheet_edit">Редактировать информацию</string>
    <string name="bottom_sheet_share">Поделиться</string>
    <string name="remove_confirmation">Хотите удалить плейлист «%1$s»?</string>
    <string name="yes_string">Да</string>
    <string name="no_string">Нет</string>
    <string name="remove_playlist_confirmation_title">Удалить плейлист</string>
    <string name="remove_playlist_confirmation_text">Хотите удалить плейлист?</string>
    <string name="remove_track_confirmation_title">Удалить трек</string>
    <string name="remove_track_confirmation_text">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="remove_track_confirmation_button">Удалить</string>
    <string name="remove_track_confirmation_cancel">Отмена</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="edit_save_button">Сохранить</string>
    <string name="empty_list_notification">В этом плейлисте нет треков</string>
    <string name="permission_denied">Нет разрешения для запуска проигрывателя</string>
</resources>