<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/search_screen_element_height"
    android:orientation="horizontal"
    android:background="?attr/colorPrimary"
    android:padding="@dimen/search_screen_element_layout_padding">

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="@dimen/search_screen_cover_size"
        android:layout_height="@dimen/search_screen_cover_size"
        android:layout_marginStart="@dimen/search_screen_cover_margin_start"
        android:src="@drawable/song_cover_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/search_screen_title_padding_start">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_title"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            android:letterSpacing="0"
            android:textSize="@dimen/search_screen_song_text_size"
            android:textStyle="normal" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/track_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:letterSpacing="0"
                android:maxLines="1"
                android:text="@string/track_artist"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/search_screen_artist_text_size"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/search_screen_dot_padding"
                android:src="@drawable/dot"
                app:tint="?attr/colorOnSecondary" />

            <TextView
                android:id="@+id/track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:letterSpacing="0"
                android:text="@string/track_time"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/search_screen_artist_text_size"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />



        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_icon"
        app:tint="?attr/colorOnSecondary" />


    </LinearLayout>