<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".media.ui.fragments.playlist.PlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_color">

        <ImageView
            android:id="@+id/playlist_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/song_cover_placeholder_with_padding"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:contentDescription="@string/go_back_descriptior"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dark_app_color" />

        <TextView
            android:id="@+id/playlist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_bold"
            android:minHeight="28dp"
            android:text="@string/playlist_title"
            android:textColor="@color/dark_app_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_cover" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:indeterminateTint="@color/main_screen_background_color"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playlist_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:minHeight="21dp"
            android:text="@string/description_example"
            android:textColor="@color/dark_app_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:minHeight="21dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_description">

            <TextView
                android:id="@+id/tracks_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ys_display_regular"
                android:lines="1"
                android:text="@string/track_artist"
                android:textColor="@color/dark_app_color"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:padding="@dimen/search_screen_dot_padding"
                android:src="@drawable/dot"
                app:tint="@color/dark_app_color" />

            <TextView
                android:id="@+id/tracks_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:lines="1"
                android:text="@string/track_time"
                android:textColor="@color/dark_app_color"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <ImageView
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/go_back_descriptior"
                android:src="@drawable/share_icon"
                app:tint="@color/dark_app_color" />

            <ImageView
                android:id="@+id/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/go_back_descriptior"
                android:src="@drawable/ic_3_dots"
                app:tint="@color/dark_app_color" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingTop="8dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bottom_sheet_dash" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            tools:listitem="@layout/search_result_item" />

    </LinearLayout>

    <View
        android:id="@+id/backgroundDimView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0.5"
        android:background="?attr/colorOnPrimary"/>

    <LinearLayout
        android:id="@+id/hideable_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingTop="8dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bottom_sheet_dash" />

        <LinearLayout
            android:id="@+id/mini_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:paddingStart="13dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/search_screen_cover_size"
                android:layout_height="@dimen/search_screen_cover_size"
                android:layout_gravity="center_vertical"
                android:background="@null"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="2dp"
                android:paddingVertical="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/playlist_little_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/song_cover_placeholder" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/search_screen_title_padding_start"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlist_little_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/track_title"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tracks_quantity_little"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/ys_display_regular"
                    android:paddingTop="1dp"
                    android:text="@string/track_artist"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:paddingStart="16dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/share_bottomsheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="19dp"
                android:paddingVertical="21dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:text="@string/bottom_sheet_share"/>

            <TextView
                android:id="@+id/edit_bottomsheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="19dp"
                android:paddingVertical="21dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:text="@string/bottom_sheet_edit"/>

            <TextView
                android:id="@+id/remove_bottomsheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="19dp"
                android:paddingVertical="21dp"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:text="@string/bottom_sheet_remove"/>


        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
